RESOLVED FIXED301307
Offscreen canvas flickers during screen resize
https://bugs.webkit.org/show_bug.cgi?id=301307
Summary Offscreen canvas flickers during screen resize
Mike Wyrzykowski
Reported 2025-10-22 16:33:46 PDT
Offscreen canvas flickers during screen resize It appears the contents are not synchronized during resize
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-22 16:34:13 PDT
Mike Wyrzykowski
Comment 2 2025-10-23 09:59:24 PDT
EWS
Comment 3 2025-10-24 23:46:31 PDT
Committed 302128@main (a161d148dd28): <https://commits.webkit.org/302128@main> Reviewed commits have been landed. Closing PR #52891 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.