Offscreen canvas flickers during screen resize https://bugs.webkit.org/show_bug.cgi?id=301307 rdar://163225630

Reviewed by Dan Glastonbury.

When Canvas is resized, we recreate the IOSurface backing store.

If the site chooses not to render again, their canvas will be blank.

Peform a simple nearest neighbor copy to preserve the contents. Fragment
shader is probably better suited for this but compute shader is simpler.

* Source/WebGPU/WebGPU/PresentationContextIOSurface.h:
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::renderBuffersWereRecreated):
(WebGPU::PresentationContextIOSurface::resizeComputePipelineState):
(WebGPU::PresentationContextIOSurface::configure): Deleted.

Canonical link: https://commits.webkit.org/302128@main